src/user.scss
@charset "utf-8";
/* CSS Document */

:root {
  /* grays */
  --gainsboro: #dcdcddff;
  --silver: #c5c3c6ff;
  --davys-grey: #46494cff;
  --black-coral: #4c5c68ff;
  --blue-munsell: #1985a1ff;
  --black: #000000;

  /* blues */
  --prussian-blue: #012a4aff;
  --indigo-dye: #0b3b5dff;
  --indigo-dye-2: #164d71ff;
  --blue-sapphire: #205e84ff;
  --honolulu-blue: #2a6f97ff;
  --dark-mode-blue: #202945;

  /* lights */
  --charcoal: #264653ff;
  --persian-green: #2a9d8fff;
  --maize-crayola: #e9c46aff;
  --sandy-brown: #f4a261ff;
  --burnt-sienna: #e76f51ff;
  --white: #ffffffff;
  --moss-green: #92a170ff;
  --yale-blue: #29527aff;
  --raw-sienna: #e88446ff;
  --sandy-brown: #ffa86eff;

  /* text */
  --text-color: #222222;
  --header-text-color: #bbbbbb;
  --subtext-text-color: #999999;

  /* background */
  --background-color: var(--white);

  /* others */
  --highlight-color: var(--sandy-brown);
  --link-dots-color: var(--white);
  --input-background: var(--white);
  --visited-link: #aaaaaa;

  --comment-01: var(--black);
  --comment-02: #5a5a5a;
  --comment-03: #737373;
  --comment-04: #828282;
  --comment-05: #888888;
  --comment-06: #9c9c9c;
  --comment-07: #aeaeae;
  --comment-08: #bebebe;
  --comment-09: #cecece;
  --comment-10: #dddddd;
}

/* forced dark mode */
[data-georgify-theme="dark"] {
  /* text */
  --text-color: var(--white);
  --header-text-color: var(--white);
  --subtext-text-color: var(--white);

  /* background */
  --background-color: var(--dark-mode-blue);

  /* others */
  --link-dots-color: #a9d6e5;
  --visited-link: #4791b1;

  --comment-01: var(--white);
  --comment-02: #4791b1a4;
  --comment-03: #4791b18f;
  --comment-04: #4791b17f;
  --comment-05: #4791b16f;
  --comment-06: #4791b15f;
  --comment-07: #4791b14f;
  --comment-08: #4791b13f;
  --comment-09: #4791b12f;
  --comment-10: #4791b11f;
}

/* system preference */
@media (prefers-color-scheme: dark) {
  html:not([data-georgify-theme]) {
    /* text */
    --text-color: var(--white);
    --header-text-color: var(--white);
    --subtext-text-color: var(--white);

    /* background */
    --background-color: var(--dark-mode-blue);

    /* others */
    --link-dots-color: #a9d6e5;
    --visited-link: #4791b1;

    --comment-01: var(--white);
    --comment-02: #4791b1a4;
    --comment-03: #4791b18f;
    --comment-04: #4791b17f;
    --comment-05: #4791b16f;
    --comment-06: #4791b15f;
    --comment-07: #4791b14f;
    --comment-08: #4791b13f;
    --comment-09: #4791b12f;
    --comment-10: #4791b11f;
  }
}

body {
  font-family: Georgia, Times, serif !important;
  font-size: 12pt !important;
  color: var(--text-color) !important;
  background-color: var(--background-color);
}

table {
  background-color: var(--background-color) !important;
  width: 700px !important;
}
tbody tr td {
  background-color: var(--background-color) !important;
}

span.pagetop {
  color: var(--header-text-color) !important;
  padding-bottom: 40px !important;
  font-family: Georgia, Times, serif !important;
  font-size: 10pt !important;
  line-height: 10px !important;
}

span.pagetop a:link,
span.pagetop a:visited {
  font-family: Georgia, Times, serif !important;
  font-size: 10pt !important;
  color: var(--header-text-color) !important;
  padding-left: 5px !important;
  padding-right: 5px !important;
  margin-bottom: 10px !important;
  padding-bottom: 4px !important;
  font-weight: normal !important;
  border-bottom: 0px dotted var(--link-dots-color) !important;
}

span.pagetop a:hover,
span.pagetop a:active {
  font-family: Georgia, Times, serif !important;
  font-size: 10pt !important;
  color: #f60 !important;
  padding-left: 5px !important;
  padding-right: 5px !important;
  margin-bottom: 10px !important;
  padding-bottom: 4px !important;
  font-weight: normal !important;
  border-bottom: 0px dotted var(--highlight-color) !important;
}

td {
  font-family: Georgia, Times, serif !important;
  font-size: 12pt !important;
  color: #999999 !important;
  padding: 3px !important;
}

.admin td {
  font-family: Georgia, Times, serif !important;
  font-size: 8.5pt !important;
  color: var(--text-color) !important;
}
td.subtext {
  font-family: Georgia, Times, serif !important;
  font-size: 12px !important;
  color: var(--subtext-text-color) !important;
  border-bottom: 1px dotted #ddd !important ;
}

form {
  margin-bottom: 0px !important;
}

input {
  padding: 8px 8px 8px 8px !important;
  background-color: var(--input-background) !important;
  color: #333 !important;
  width: auto !important;
  font-family: Georgia, Times, serif !important;
  font-size: 15px !important;
  border: 1px solid #ccc !important;
  -moz-border-radius: 4px !important;
  -webkit-border-radius: 4px !important;
  border-radius: 4px !important;
}

input[type="text"] {
  color: #333 !important;
}

input[type="submit"] {
  font-family: Georgia, Times, serif !important;
  color: var(--text-color) !important;
  padding: 8px 8px 8px 8px !important;
  background-color: #f60 !important;
  width: auto !important;
  font-family: Georgia, Times, serif !important;
  font-size: 13px !important;
  border: 1px solid #f60 !important;
  -moz-border-radius: 4px !important;
  -webkit-border-radius: 4px !important;
  border-radius: 4px !important;
  cursor: pointer !important;
}

textarea {
  font-family: Georgia, Times, serif !important;
  font-size: 15px !important;
  color: var(--text-color) !important;
  column-span: 200px !important;
  border: 1px solid #ccc !important;
  -moz-border-radius: 4px !important;
  -webkit-border-radius: 4px !important;
  border-radius: 4px !important;
  width: 660px !important;
  height: 100px !important;
}

a:link {
  color: var(--highlight-color) !important;
  text-decoration: none !important;
  border-bottom: 1px dotted var(--link-dots-color) !important;
}

a:hover,
a:active {
  color: var(--highlight-color) !important;
  text-decoration: none !important;
  border-bottom: 1px dotted var(--highlight-color) !important;
}

a:visited {
  color: var(--visited-link) !important;
  text-decoration: none !important;
  border-bottom: 1px dotted var(--link-dots-color);
}

.default {
  font-family: Georgia, Times, serif !important;
  font-size: 12pt !important;
  color: #999999 !important;
  border-bottom: 1px dotted #ccc !important;
  padding: 0px !important;
}
.admin {
  font-family: Georgia, Times, serif !important;
  font-size: 8.5pt !important;
  color: var(--text-color) !important;
}
.title {
  font-family: Georgia, Times, serif !important;
  font-size: 12pt !important;
  color: #999999 !important;
  padding-top: 12px !important;
  font-weight: normal !important;
}

.title a:link {
  font-weight: normal !important;
  font-family: Georgia, Times, serif !important;
  font-size: 14pt !important;
  color: var(--text-color) !important;
  margin-right: 6px;
}

.title a:hover,
.title a:active {
  border-bottom: 1px dotted var(--highlight-color) !important;
}
.title a:visited {
  color: #aaaaaa;
  border-bottom: 1px dotted var(--link-dots-color);
}

.adtitle {
  font-family: Georgia, Times, serif !important;
  font-size: 9pt !important;
  color: #999999 !important;
}

.yclinks {
  font-family: Georgia, Times, serif !important;
  font-size: 8pt !important;
  color: #999999 !important;
  padding-top: 15px !important;
}

.yclinks a:link,
.yclinks a:visited {
  color: #bbb !important;
  padding-left: 5px !important;
  padding-right: 5px !important;
  font-weight: normal !important;
  border-bottom: none !important;
}

.yclinks a:hover,
.yclinks a:active {
  color: #f60 !important;
  padding-left: 5px !important;
  padding-right: 5px !important;
  font-weight: normal !important;
  border-bottom: none !important;
}

.pagetop {
  font-family: Georgia, Times, serif !important;
  font-size: 12pt !important;
  color: var(--text-color) !important;
}
.comhead {
  font-family: Georgia, Times, serif !important;
  font-size: 9pt !important;
  color: #888888 !important;
}

.comment {
  color: var(--text-color) !important;
  font-family: Georgia, Times, serif !important;
  font-size: 15px !important;
  line-height: 22px !important;
  padding-top: 10px !important;
}

.dead {
  font-family: Georgia, Times, serif !important;
  font-size: 9pt !important;
  color: #dddddd !important;
}
i {
  font-style: italic !important;
}

u {
  text-decoration: none !important;
  border-bottom: 1px dotted var(--highlight-color) !important;
  font-size: 12px !important;
  margin-top: -10px !important;
}

.comment a:link,
.comment a:visited {
  color: var(--highlight-color) !important;
  border-bottom: 1px dotted var(--link-dots-color) !important;
  font-weight: normal !important;
}

.comment a:hover,
.comment a:active {
  color: var(--highlight-color) !important;
  border-bottom: 1px dotted var(--highlight-color) !important;
  font-weight: normal !important;
}

.dead a:link,
.dead a:visited {
  color: var(--header-text-color) !important;
}
.pagetop a:visited {
  color: var(--text-color) !important;
}
.topsel a:link,
.topsel a:visited {
  color: #ffffff !important;
}

.subtext {
  font-family: Georgia, Times, serif !important;
  font-size: 8pt !important;
  color: var(--subtext-text-color) !important;
  padding-bottom: 20px !important;
  font-style: italic !important;
}

.subtext a:link {
  padding-left: 2px !important ;
  padding-right: 4px !important;
  color: var(--highlight-color) !important ;
  font-weight: normal !important;
  border-bottom: 1px dotted var(--link-dots-color) !important;
}

.subtext a:hover,
.subtext a:active {
  text-decoration: none !important;
  border-bottom: 1px dotted var(--highlight-color) !important;
}

.subtext a:visited {
  padding-left: 2px !important ;
  padding-right: 4px !important;
  color: var(--highlight-color) !important ;
  font-weight: normal !important;
  border-bottom: 1px dotted var(--link-dots-color);
}

.comhead a:link {
  padding-left: 2px !important ;
  padding-right: 4px !important;
  color: var(--highlight-color) !important ;
  font-weight: normal !important;
  border-bottom: 1px dotted var(--link-dots-color) !important;
}

.comhead a:hover,
.comhead a:active {
  padding-left: 2px !important;
  padding-right: 4px !important;
  color: var(--highlight-color) !important ;
  font-weight: normal !important;
  text-decoration: none !important;
  border-bottom: 1px dotted var(--highlight-color) !important;
}

.default p {
  margin-top: 2px !important;
  margin-bottom: 0px !important;
  padding-bottom: 5px;
  padding-top: 15px !important;
  text-rendering: optimizeLegibility !important;
}

.pagebreak {
  page-break-before: always !important;
}

pre {
  overflow: auto !important;
  padding: 2px !important;
  max-width: 600px !important;
}
pre:hover {
  overflow: auto !important;
}

.c00,
.c00 a:link {
  color: var(--comment-01) !important;
}
.c5a,
.c5a a:link,
.c5a a:visited {
  color: var(--comment-02) !important;
}
.c73,
.c73 a:link,
.c73 a:visited {
  color: var(--comment-03) !important;
}
.c82,
.c82 a:link,
.c82 a:visited {
  color: var(--comment-04) !important;
}
.c88,
.c88 a:link,
.c88 a:visited {
  color: var(--comment-05) !important;
}
.c9c,
.c9c a:link,
.c9c a:visited {
  color: var(--comment-06) !important;
}
.cae,
.cae a:link,
.cae a:visited {
  color: var(--comment-07) !important;
}
.cbe,
.cbe a:link,
.cbe a:visited {
  color: var(--comment-08) !important;
}
.cce,
.cce a:link,
.cce a:visited {
  color: var(--comment-09) !important;
}
.cdd,
.cdd a:link,
.cdd a:visited {
  color: var(--comment-10) !important;
}

